# embassy-template-nrf52840

./: Cargo.toml
src/: main.rs
