[package]
edition = "2021"
name = "nrf52840-template"
version = "0.1.0"

[features]
default = ["nightly"]
nightly = [
    "embedded-hal-async",
    "embassy-executor/nightly",
    "embassy-nrf/nightly",
    # "embassy-net/nightly",
    # "embassy-net-esp-hosted",
    # "embassy-net-enc28j60",
    "embassy-nrf/unstable-traits",
    "embassy-time/nightly",
    "embassy-time/unstable-traits",
    "static_cell/nightly",
    # "embassy-usb",
    "embedded-io-async",
    "embedded-hal-bus/async",
    # "embassy-net",
    # "embassy-lora",
    # "lora-phy",
    # "lorawan-device",
    # "lorawan",
]

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
# embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"], optional = true }
# embassy-usb = { version = "0.1.0", features = ["defmt", "msos-descriptor",], optional = true }
embedded-io = { version = "0.5.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.5.0", optional = true, features = ["defmt-03"] }
# embassy-lora = { version = "0.1.0", features = ["time", "defmt"], optional = true }
# lora-phy = { version = "1", optional = true }
# lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"], optional = true }
# lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"], optional = true }
# embassy-net-esp-hosted = { version = "0.1.0", features = ["defmt"], optional = true }
# embassy-net-enc28j60 = { version = "0.1.0", features = ["defmt"], optional = true }

defmt = "0.3"
defmt-rtt = "0.4"

fixed = "1.10.0"
static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
# rand = { version = "0.8.4", default-features = false }
# embedded-storage = "0.3.0"
# usbd-hid = "0.6.0"
# serde = { version = "1.0.136", default-features = false }
embedded-hal = { version = "1.0.0-rc.1" }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
embedded-hal-bus = { version = "0.1.0-rc.1" }
# num-integer = { version = "0.1.45", default-features = false }
# microfft = "0.5.0"

[profile.release]
debug = 2

[[bin]]
name = "nrf52840-template"
test = false
bench = false

[patch.crates-io]
# lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "1323eccc1c470d4259f95f4f315d1be830d572a3"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
# embassy-lora = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
# embassy-net-esp-hosted = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
# embassy-net-enc28j60 = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }